feat:added route protection and register and login routes
