# build/swagger.json
@@ -43,18 +43,6 @@
 			"UserSchema": {
 				"$ref": "#/components/schemas/Objection.ModelObject_User_"
 			},
-			"Pick_any.Objection.DataPropertyNames_any__": {
-				"properties": {},
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Objection.ModelObject_any_": {
-				"$ref": "#/components/schemas/Pick_any.Objection.DataPropertyNames_any__",
-				"description": "A Pojo version of model."
-			},
-			"User": {
-				"$ref": "#/components/schemas/Objection.ModelObject_any_"
-			},
 			"Pick_UserSchema.Exclude_keyofUserSchema.id-or-createdAt-or-updatedAt__": {
 				"properties": {
 					"email": {
@@ -82,6 +70,22 @@
 			"Omit_UserSchema.id-or-createdAt-or-updatedAt_": {
 				"$ref": "#/components/schemas/Pick_UserSchema.Exclude_keyofUserSchema.id-or-createdAt-or-updatedAt__",
 				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"Pick_UserSchema.email-or-password_": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
 			"Pick_Post.Objection.DataPropertyNames_Post__": {
 				"properties": {
@@ -219,24 +223,23 @@
 				],
 				"security": [],
 				"parameters": []
-			},
+			}
+		},
+		"/api/v1/users/register": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
 					"201": {
-						"description": "Created",
+						"description": "User registered successfully",
 						"content": {
 							"application/json": {
 								"schema": {
 									"anyOf": [
 										{
-											"$ref": "#/components/schemas/User"
+											"$ref": "#/components/schemas/UserSchema"
 										},
 										{
-											"type": "string",
-											"enum": [
-												"Error creating User"
-											]
+											"type": "string"
 										}
 									]
 								}
@@ -263,14 +266,21 @@
 		},
 		"/api/v1/users/login": {
 			"post": {
-				"operationId": "Login",
+				"operationId": "LoginUser",
 				"responses": {
-					"200": {
-						"description": "Ok",
+					"201": {
+						"description": "User logged in successfully",
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "string"
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/UserSchema"
+										},
+										{
+											"type": "string"
+										}
+									]
 								}
 							}
 						}
@@ -286,20 +296,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"name": {
-										"type": "string"
-									},
-									"id": {
-										"type": "number",
-										"format": "double"
-									}
-								},
-								"required": [
-									"name",
-									"id"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/Pick_UserSchema.email-or-password_"
 							}
 						}
 					}
